SSCSFT-20 - Ensure that application can be built with bootWithCCD locally.